// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Rendering renders itself correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="link"
>
  <Text
    color="primaryLight"
    style={
      Array [
        Object {
          "color": "#00AEFF",
          "fontFamily": "System",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "600",
          "textAlign": "left",
        },
      ]
    }
    testID="link-label"
    weight="semiBold"
  >
    Go To Link
  </Text>
</View>
`;

exports[`Link Rendering renders the child instead of label correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="link"
>
  <Text
    testID="link-children"
  >
    Custom Label
  </Text>
</View>
`;
